# colutius_old

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  colutius.pro
.github/workflows/: Linux.yml  MacOS.yml  ToJihulab.yml  Windows.yml
.qt_for_python/uic/: config.py
docs/: README-CN.md  架构.md
src/: login.cc  login.hh  login.ui  main.cc  server.cc  server.hh  socket.cc  socket.hh  thread.cc  thread.hh  widget.cc  widget.hh  widget.ui
src/resource/: Login.qss  Widget.qss  resource.qrc  serverstyle.qss
src/resource/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/ui/: config.cc  config.hh  config.ui  loginwidget.cc  loginwidget.hh  loginwidget.ui  mainwidget.cc  mainwidget.hh  mainwidget.ui
